# nanami

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  README.md
.opencode/skills/nanami-architecture/: SKILL.md
.opencode/skills/nanami-cubesandbox-integration/: SKILL.md
.opencode/skills/nanami-desktop-integration/: SKILL.md
.opencode/skills/nanami-license-assets/: SKILL.md
.opencode/skills/nanami-openclaw-integration/: SKILL.md
.opencode/skills/nanami-permission-review/: SKILL.md
.opencode/skills/nanami-protocol/: SKILL.md
.opencode/skills/nanami-release-check/: SKILL.md
.opencode/skills/nanami-rust-core/: SKILL.md
.opencode/skills/nanami-ui/: SKILL.md
apps/nanami-core/: Cargo.toml  README.md
apps/nanami-core/src/: error.rs  lib.rs  main.rs  openclaw.rs  state.rs  tests.rs
apps/nanami-core/src/mock/: mod.rs  workflow.rs
apps/nanami-core/src/routes/: chat.rs  mod.rs  permissions.rs  persona.rs  projects.rs  sandbox.rs  tasks.rs  workflow.rs
apps/nanami-core/src/services/: manifest.rs  mod.rs  project.rs
apps/nanami-core/src/tests/: chat.rs  health.rs  manifest.rs  mod.rs  openclaw.rs  permissions.rs  persona.rs  projects.rs  sandbox.rs  support.rs  tasks.rs  workflow.rs
apps/nanami-ui/: CMakeLists.txt  README.md
apps/nanami-ui/i18n/: nanami_zh_CN.ts
apps/nanami-ui/qml/: Main.qml  PetWindow.qml
apps/nanami-ui/qml/components/: ChatPanel.qml  CompanionHome.qml  PermissionPanel.qml  PetPanel.qml  ProjectPanel.qml  SandboxPanel.qml  StatusPanel.qml  TaskPanel.qml  WorkflowPanel.qml
apps/nanami-ui/src/: ChatController.cpp  ChatController.h  DesktopController.cpp  DesktopController.h  HealthController.cpp  HealthController.h  HttpJsonClient.cpp  HttpJsonClient.h  PermissionController.cpp  PermissionController.h  PersonaController.cpp  PersonaController.h  PetRendererController.cpp  PetRendererController.h  ProjectController.cpp  ProjectController.h  SandboxController.cpp  SandboxController.h  SseStreamParser.cpp  SseStreamParser.h  StatusController.cpp  StatusController.h  TaskController.cpp  TaskController.h  WorkflowController.cpp  WorkflowController.h  main.cpp
apps/nanami-ui/src/live2d/: Live2DRendererAdapter.cpp  Live2DRendererAdapter.h
crates/nanami-openclaw/: Cargo.toml
crates/nanami-openclaw/src/: agent.rs  chat.rs  client.rs  config.rs  error.rs  lib.rs  sse.rs  state.rs  status.rs
crates/nanami-openclaw/src/mapping/: mod.rs  sandbox.rs  tool.rs  workflow.rs
crates/nanami-openclaw/tests/: agent_events.rs  chat.rs  status.rs  stream.rs
crates/nanami-openclaw/tests/agent_events_cases/: mod.rs  native.rs  sandbox.rs  support.rs  tool.rs  workflow.rs
crates/nanami-permission/: Cargo.toml
crates/nanami-permission/src/: lib.rs
crates/nanami-permission/tests/: manager.rs
crates/nanami-protocol/: Cargo.toml  README.md
crates/nanami-protocol/src/: audit.rs  chat.rs  error.rs  event.rs  lib.rs  manifest.rs  openclaw.rs  permission.rs  persona.rs  project.rs  sandbox.rs  session.rs  task.rs  tool.rs  workflow.rs
crates/nanami-protocol/tests/: audit.rs  chat.rs  chat_stream.rs  event_serialization.rs  events.rs  openclaw.rs  permission.rs  permissions.rs  persona.rs  project.rs  project_structure.rs  sandbox.rs  tasks.rs  workflow.rs
crates/nanami-sandbox/: Cargo.toml
crates/nanami-sandbox/src/: lib.rs
docs/: agent-workflow.md  architecture.md  live2d.md  mvp-roadmap.md  permission-model.md  protocol.md  security.md
