[workspace]
members = [
    "apps/nanami-core",
    "crates/nanami-openclaw",
    "crates/nanami-permission",
    "crates/nanami-protocol",
    "crates/nanami-sandbox",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/YangYuS8/nanami"

[workspace.dependencies]
async-stream = "0.3"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tokio-stream = "0.1"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"
