[package]
name = "nanami-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
nanami-protocol = { path = "../../crates/nanami-protocol" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower = { workspace = true, features = ["util"] }
