[package]
name = "nanami-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
nanami-openclaw = { path = "../../crates/nanami-openclaw" }
nanami-protocol = { path = "../../crates/nanami-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
