[package]
name = "nanami-openclaw"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nanami-protocol = { path = "../nanami-protocol" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
wiremock.workspace = true
